--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "type": "project",
 
     "require": {
-        "php": ">=5.6"
+        "php": ">=5.6",
         "paquettg/php-html-parser": "1.7",
         "guzzlehttp/guzzle": "~6.0",
         "protobuf-php/protobuf": "^0.1.0@dev",
