--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "monolog/monolog": "^1.20",
         "jeremeamia/xstatic": "^1.0",
         "php-di/php-di": "^5.3",
-        "phpseclib/phpseclib": "^2.0"
+        "phpseclib/phpseclib": "^2.0",
+        "illuminate/config": "^5.2"
     },
     "autoload": {
         "psr-4": {
@@ -23,7 +24,8 @@
             "POGOProtos\\": "res/POGOProtos/"
         },
         "files": [
-            "src/Includes/protocolbuffers.inc.php",
+            "includes/protocolbuffers.inc.php",
+            "includes/config.php",
             "res/POGOProtos/Networking/Envelopes/RequestEnvelope.php",
             "res/POGOProtos/Networking/Envelopes/ResponseEnvelope.php"
         ]
