--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "illuminate/config": "^5.2",
         "nicklasw/s2-geometry-library-php": "dev-master",
         "nicklasw/pogoprotos-php": "dev-master",
-        "pogo-php/pogoencrypt-php": "^1.0"
+        "pogo-php/pogoencrypt-php": "^1.0",
+        "paragonie/random_compat": "^2.0"
     },
     "autoload": {
         "psr-4": {
