--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
         "psr/log": "^1.0",
         "illuminate/support": "^5.2"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~4.0||~5.0"
+    },
     "autoload": {
         "psr-4": {
             "NicklasW\\PkmGoApi\\": "src/"
@@ -24,6 +27,14 @@
         "files": [
             "includes/config.php"
         ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "NicklasW\\PkmGoApi\\Test\\": "tests/"
+        }
+    },
+    "scripts": {
+        "test": "phpunit"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
